# ncnn-android-waifu2x-demo

./: .gitignore  README.md  README_CN.md  build.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/pro/archiemeng/waifu2x/: MainActivity.kt  Waifu2x.kt
app/src/main/java/pro/archiemeng/waifu2x/utils/: Processor.kt
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/waifu2x/: waifu2x.cpp  waifu2x.h  waifu2x_jni.cpp
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
